chore: build request body mitra-hotel in swagger
