# src/docs/swagger_output.json
@@ -1745,26 +1745,54 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
+                "required": [
+                  "locationId",
+                  "name",
+                  "description",
+                  "address",
+                  "contact",
+                  "files"
+                ],
                 "properties": {
                   "locationId": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "ID lokasi hotel"
                   },
                   "name": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Nama hotel"
                   },
                   "description": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Deskripsi hotel"
                   },
                   "address": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Alamat hotel"
                   },
                   "contact": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Kontak hotel"
+                  },
+                  "files": {
+                    "type": "array",
+                    "description": "Gambar-gambar hotel (Max: 10 gambar",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
                   }
+                }
+              },
+              "encoding": {
+                "files": {
+                  "style": "form",
+                  "explode": true
                 }
               }
             }
@@ -1796,14 +1824,58 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
+                "required": [
+                  "hotelId"
+                ],
                 "properties": {
                   "hotelId": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "ID hotel yang akan diubah"
+                  },
+                  "locationId": {
+                    "type": "string",
+                    "description": "ID lokasi hotel baru",
+                    "nullable": true
+                  },
+                  "name": {
+                    "type": "string",
+                    "description": "Nama hotel baru",
+                    "nullable": true
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Deskripsi hotel baru",
+                    "nullable": true
+                  },
+                  "address": {
+                    "type": "string",
+                    "description": "Alamat hotel baru",
+                    "nullable": true
+                  },
+                  "contact": {
+                    "type": "string",
+                    "description": "Kontak hotel baru",
+                    "nullable": true
+                  },
+                  "files": {
+                    "type": "array",
+                    "description": "Gambar-gambar hotel baru (jika ingin menambah atau mengganti - Max: 10 gambar)",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
                   }
+                }
+              },
+              "encoding": {
+                "files": {
+                  "style": "form",
+                  "explode": true
                 }
               }
             }
@@ -2230,20 +2302,44 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
+                "required": [
+                  "name",
+                  "description",
+                  "roomTypeId",
+                  "files"
+                ],
                 "properties": {
                   "name": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Nama kamar"
                   },
                   "description": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Deskripsi kamar"
                   },
                   "roomTypeId": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "ID tipe kamar"
+                  },
+                  "files": {
+                    "type": "array",
+                    "description": "Gambar-gambar kamar",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
                   }
+                }
+              },
+              "encoding": {
+                "files": {
+                  "style": "form",
+                  "explode": true
                 }
               }
             }
@@ -2275,20 +2371,43 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
+                "required": [
+                  "roomId"
+                ],
                 "properties": {
                   "roomId": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "ID kamar yang akan diubah"
                   },
                   "name": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Nama baru kamar (opsional)",
+                    "nullable": true
                   },
                   "description": {
-                    "example": "any"
+                    "type": "string",
+                    "description": "Deskripsi baru kamar (opsional)",
+                    "nullable": true
+                  },
+                  "files": {
+                    "type": "array",
+                    "description": "Gambar-gambar baru kamar (jika ingin menambah atau mengganti)",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
                   }
+                }
+              },
+              "encoding": {
+                "files": {
+                  "style": "form",
+                  "explode": true
                 }
               }
             }
